fixed branding image styles still working on mobile menu burger

--- a/src/components/hill-navbar/hill-navbar.scss
+++ b/src/components/hill-navbar/hill-navbar.scss
@@ -14,29 +14,48 @@ a{
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin: 0 30px;
 }
 
 #hill-navbar__home{
   flex: 1.5;
+  display: flex;
+  align-items: baseline;
+  column-gap: 10px;
+  margin: 50px auto;
 }
 
-#home-img{
+#home-img-wrapper{
   width: 75px;
   height: 75px;
   overflow: hidden;
   object-fit: cover;
+  object-position: center;
+}
+
+#home-img{
+  width: 100%;
+}
+
+#home-name{
+  display: block;
 }
 
 #hill-navbar__list-wrapper{
   flex: 1;
 }
 
-#hill-navbar__list{
-  display: flex;
-  list-style: none;
-  justify-content: space-between;
-  align-items: center;
-  padding-left: 5rem;
-  padding-inline-start: 0;
+#list-burger{
+  display: block;
 }
+
+#list-menu{
+  visibility: hidden;
+}
+// #list-menu{
+//   display: flex;
+//   list-style: none;
+//   justify-content: space-between;
+//   align-items: center;
+//   padding-left: 5rem;
+//   padding-inline-start: 0;
+// }
